# segregador-de-cores

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
calibracao/: CMakeLists.txt  package.xml
calibracao/launch/: disparidade.launch  stereo_calibracao.launch  teste.launch
calibracao/src/yaml/: left.yaml  right.yaml
histogram/: CMakeLists.txt
histogram/images/: imagesPaths.json
histogram/include/: buffer.hpp  converter.hpp  hisCalculator.hpp  imageCapturer.hpp
histogram/includes/: buffer.hpp  converter.hpp  hisCalculator.hpp
histogram/src/: converter.cpp  histCalculator.cpp  imageCapturer.cpp  main.cpp
